# CpG_Methylation_MVP

./: .env.example  .gitignore  AGENTS.md  LICENSE  MODEL_USE.md  Makefile  Model use  NEXT_STEPS.md  PROJECT_STATE.md  README.md  app.py  dna_methylation_app.py  program.md  pyproject.toml  requirements.txt
.github/workflows/: generate-artifacts.yml
app/: main.py  ui_config.py
core/: __init__.py  analyze.py  config.py  ingest.py  io.py  transform.py  validate.py
data/: README.md
data/evidence/: external_source_policy.json  workflow_01_context_chunks.json
data/panels/: core_demo_panel.csv
data/sample/: methylation_sample.csv
deploy/: render.yaml
docs/: DATA_DICTIONARY.md  DEV_DAY_START.md  SCHEMA.md  demo_script.md (90 seconds)  deploy_runbook.md  duplicate_aggregation_adr.md  duplicate_aggregation_adr_review_memo.md  duplicate_aggregation_stakeholder_brief.md  duplicate_policy_decision.md  facppm_mapping.md (competency → evidence)  hygiene_triage_2026-04-07.md  one_pager.md  pr_12_review.md  pr_12_salvage_matrix.md  pr_17_review.md  pr_21_review.md  pr_27_review.md  pr_7_review.md  pr_7_salvage_matrix.md  pr_production_hardening_round_1.md  production_readiness_plan.md  release_0_1_demo_plan_2026-04-07.md  repo_audit_prompt_post_9f74f64.md  repo_structure_refactor.md  risk_register.md  strategic_insights_pack.md  validation_rules.md  workflow_evaluation_2026-04-07.md
docs/context/: context-pack.md  decision-log.md  (+2 more)
specs/: current-task.md
tests/: test_app_main.py  test_architecture_rules.py  test_context_helpers.py  test_imports.py  test_ingest.py  test_panels.py  test_pipeline_smoke.py  test_qc_explain.py  test_smoke_core.py  test_smoke_pipeline.py  test_streamlit_smoke.py  test_transform.py  test_workflow_01.py
(+32 files in other folders)
