[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpg-methylation-mvp"
version = "0.1.0"
description = "Lightweight Streamlit MVP for CpG methylation upload, validation, normalization, and QC."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit",
  "pandas",
  "tabulate",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cpg_methylation_mvp*"]

[project.optional-dependencies]
dev = [
  "mypy",
  "pandas-stubs",
  "pytest",
  "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["app", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = [
  "E501",  # keep existing long UI copy/readability lines out of this first lint gate
  "UP012", # avoid broad test rewrites from string.encode("utf-8") to bytes literals
]

[tool.mypy]
python_version = "3.10"
files = ["src/cpg_methylation_mvp"]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
warn_unused_ignores = true
